--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>DQuath</title>
+    <title>DQuath Technologies</title>
   </head>
   <body>
     <div id="root"></div>
